# mcp-openrouter

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  install.sh  pyproject.toml  server.json  uninstall.sh
.github/workflows/: release.yml
src/mcp_openrouter/: __init__.py  __main__.py  cli.py  client.py  config.py  installer.py  server.py
src/openrouter_mcp/: __main__.py  client.py  config.py  server.py
tests/: test_cli.py  test_client.py  test_config.py  test_installer.py  test_release_metadata.py  test_server.py  test_tools.py
