[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-openrouter"
version = "1.0.0"
description = "MCP server providing access to 300+ AI models via OpenRouter"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "tsilva" }]
keywords = ["mcp", "openrouter", "ai", "llm", "claude", "gpt", "gemini"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp>=2.0.0,<4",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
mcp-openrouter = "mcp_openrouter.server:main"

[project.urls]
Homepage = "https://github.com/tsilva/mcp-openrouter"
Repository = "https://github.com/tsilva/mcp-openrouter"
Issues = "https://github.com/tsilva/mcp-openrouter/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_openrouter"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
